--- a/ums/templates/login.html
+++ b/ums/templates/login.html
@@ -29,7 +29,7 @@
      {% if form.errors %}
      <p>Your username and password didn't match. Please try again. Or <a href='/accounts/register/' >register</a></p>
      {% else %}
-     <p>New to Stylus? <a href='/accounts/register/' >Register</a> </p>
+     <p>New to Stylus? <a href='{% url 'registration_register' %}' >Register</a> </p>
      {% endif %}
  
      <form method="post" action="{% url 'login' %}" class='form-group'>
@@ -46,6 +46,7 @@
         <input type="submit" value="login" class="btn btn-default"/>
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
+ 	<p>Forget the password? <a href='{% url 'password_reset' %}' >Reset Password</a> </p>
  
  {% endblock %}
     <div class='pull-right'>
