--- a/ums/templates/registration/password_reset_confirm1.html
+++ b/ums/templates/registration/password_reset_confirm1.html
@@ -22,7 +22,9 @@
      <script src="/static/assets/js/ga.js"> </script>
  </head>
  <body>
+	 
 {% load i18n %}
+<div class="container-fluid" style="margin-top:35px;margin-left:50px; max-width:440px;">
 
 {% block content_title %}<h4>{{ title }}</h4>{% endblock %}
 {% block content %}
