--- a/gargoyle/templates/homepage.html
+++ b/gargoyle/templates/homepage.html
@@ -111,7 +111,7 @@
  				load();
              },
  			error: function (jqXHR, exception) {
- 				concole.log('error');
+ 				console.log('error');
  				$('#id_sumbit').click();
  			},
              data:fd,
@@ -139,7 +139,7 @@
             },
 			error: function (jqXHR, exception) {
 				progress = false
-				concole.log('error');
+				console.log('error');
 				$('#id_sumbit').click();
 			},
             data:fd,
