--- a/polaris/templates/log.html
+++ b/polaris/templates/log.html
@@ -6,7 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these       tags -->
      <title>
-     Vocab | Stylus | AcadeMe·德明教育体验
+     Log | Stylus | AcadeMe·德明教育体验
      </title>
      <meta name="keywords" content="AcadeMe, 德明教育体验, 词汇, Stylus">
      <meta name="description" content="AcadeMe·德明教育体验 词汇分析">
