--- a/static/assets/css/vocab.css
+++ b/static/assets/css/vocab.css
@@ -93,6 +93,7 @@ td{
 .vocab-entry_id,
 .vocab-sense_id,
 .vocab-sentence_custom,
+.vocab-highlight,
 .glossary-gid,
 .glossary-entry_id,
 .glossary-sense_id,
