add preference setting

--- a/ums/templates/profile.html
+++ b/ums/templates/profile.html
@@ -33,6 +33,7 @@
   <span class="navbar-brand"><a href="{% url 'profile' %}">Profile</a> | <a href="/">Stylus</a></span >
   <ul class="nav navbar-nav">
    <li><a class='load_href' id="{% url 'vocab_history' %}" href="#">History</a></li>
+   <li><a class='load_href' id="{% url 'preference' %}" href="#">Preference</a></li>
    <!--li class="divider"></li-->
    <li><a class='load_href' href="#" id="{% url 'get_ocr' %}">Get OCR Pages</a></li>
    <li><a class='load_href' href="#" id = {% url 'password_change' %}>Change Password</a></li>
