add admin email and check spam folder info

--- a/ums/templates/registration/registration_complete.html
+++ b/ums/templates/registration/registration_complete.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container-fluid" style="margin-top:35px;margin-left:50px; max-width:540;">
 	    <h4>Registration</h4>
-        <p> Thank you for your registration! An verification email has been sent to your email address. Please verify in 7 days.</p>
+        <p> Thank you for your registration! An verification email has been sent to your email address. Please verify in 7 days. If not recieved, check your spam folder or contact the admin at xu.xiao@yale.edu.</p>
 
 		<div class='pull-right'>
 				<h4><a href='/' target='_blank' class='logo'>Stylus</a> | <a href='http://www.academechina.com' target='_blank' class='logo'>AcadeMe</a></h4>	
